Minor fix to navbar (hover effect & better spacing)

--- a/pnvev/public/css/header.css
+++ b/pnvev/public/css/header.css
@@ -28,9 +28,12 @@ body>header {
 }
 
 body>header>nav {
+    --bg-color: rgb(53, 76, 109);
+    --bg-color-hover: rgb(75, 106, 148);
+    --bg-color-active: rgb(34, 51, 75);
     display: flex;
     flex-direction: row;
-    background-color: rgb(53, 76, 109);
+    background-color: var(--bg-color);
     color: white;
 }
 
@@ -57,8 +60,12 @@ body>header>nav>ul>li {
     display: flex;
     align-items: center;
     position: relative;
-    padding: 0 1rem;
-    margin-right: 1rem;
+    padding: 0 2rem;
+    /* margin-right: 1rem; */
+}
+
+body>header>nav>ul>li:hover {
+    background-color: var(--bg-color-hover);
 }
 
 body>header>nav ul>li>ul {
@@ -67,7 +74,7 @@ body>header>nav ul>li>ul {
     top: 100%;
     left: 0;
 
-    background-color: rgb(53, 76, 109);
+    background-color: var(--bg-color);
     min-width: max-content;
     padding: 0;
     margin: 0;
@@ -79,10 +86,14 @@ body>header>nav ul>li:hover>ul {
 
 body>header>nav .active
 {
-    background-color: #677891;
+    background-color: var(--bg-color-active);
 }
 
 body>header>nav ul>li>ul>li {
     padding: 0.5rem 1rem;
     margin: 0;
+}
+
+body>header>nav ul>li>ul>li:hover {
+    background-color: var(--bg-color-hover);
 }
